--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sữa Bột Tốt Cho Bé</title>
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-    <script src="../JS/jquery-3.5.1.min.js"></script>
-    <script src="../JS/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/">
+    <script src="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/JS/jquery-3.5.1.min.js"></script>
+    <script src="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/JS/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <script src="../JS/dangnhapanddangkianddathang.js"></script>
-    <link rel="stylesheet" href="../css/sua.css">
-    <link rel="stylesheet" href="../css/sanpham.css">
+    <script src="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/JS/dangnhapanddangkianddathang.js"></script>
+    <link rel="stylesheet" href="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/css/sua.css">
+    <link rel="stylesheet" href="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/css/sanpham.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js" crossorigin="anonymous"></script>
 </head>
 <style>
