--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sữa Bột Tốt Cho Bé</title>
-    <link rel="stylesheet" type="text/css" href="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/">
+    <link rel="stylesheet" type="text/css" href="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/css/bootstrap.min.css">
     <script src="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/JS/jquery-3.5.1.min.js"></script>
     <script src="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/JS/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -24,7 +24,8 @@
 <body>
     <div class="container-fluid">
         <div class="col-md-12">
-            <img src="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/img/header.png" alt="" width="100%">
+            <img src="https://pitch-magnesium-3af.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2Fa994e35a-af1e-4b9b-93f2-b2f8fdd33241%2Fheader.png?table=block&id=f2ea2899-22bf-4873-96ed-4cee9187e529&spaceId=1a67c586-9ae3-4ad1-b17c-dc8466c4cac0&width=2000&userId=&cache=v2"
+                alt="" width="100%">
         </div>
         <div class="col-md-12">
             <nav class=" bg-info navbar-collapse">
