--- a/chitietgrowplus.html
+++ b/chitietgrowplus.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sữa Bột Tốt Cho Bé</title>
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-    <script src="../JS/jquery-3.5.1.min.js"></script>
-    <script src="../JS/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/css/bootstrap.min.css">
+    <script src="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/JS/jquery-3.5.1.min.js"></script>
+    <script src="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/JS/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <script src="../JS/dangnhapanddangkianddathang.js"></script>
-    <link rel="stylesheet" href="../css/dathang.css">
+    <script src="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/JS/dangnhapanddangkianddathang.js"></script>
+    <link rel="stylesheet" href="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/css/dathang.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js" crossorigin="anonymous"></script>
 </head>
 <style>
@@ -23,13 +23,14 @@
 <body>
     <div class="container-fluid">
         <div class="col-md-12">
-            <img src="../img/header.png" alt="" width="100%">
+            <img src="https://pitch-magnesium-3af.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2Fa994e35a-af1e-4b9b-93f2-b2f8fdd33241%2Fheader.png?table=block&id=f2ea2899-22bf-4873-96ed-4cee9187e529&spaceId=1a67c586-9ae3-4ad1-b17c-dc8466c4cac0&width=2000&userId=&cache=v2"
+                alt="" width="100%">
         </div>
         <div class="col-md-12">
             <nav class=" bg-info navbar-collapse">
                 <ul class="navbar-nav nav">
-                    <li class="navbar-item"><a href="../html/trangchudadangnhap.html" class="navbar-link">TRANG CHỦ</a></li>
-                    <li class="navbar-item"><a href="../html/sanpham.html" class="navbar-link">SẢN PHẨM</a></li>
+                    <li class="navbar-item"><a href="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/trangchudadangnhap.html" class="navbar-link">TRANG CHỦ</a></li>
+                    <li class="navbar-item"><a href="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/sanpham.html" class="navbar-link">SẢN PHẨM</a></li>
                     <li class="navbar-item"><a href="#lienhe" class="navbar-link">LIÊN HỆ</a></li>
                     <li class="navbar-item"><a href="#" class="navbar-link" id="btndathang">ĐẶT HÀNG</a></li>
                 </ul>
@@ -38,7 +39,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="col-md-3">
-                    <img src="../img/listsua/growplus/5.png" alt="" style="margin-left: 60px; margin-top: 50px;" width="100%">
+                    <img src="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/img/listsua/growplus/5.png" alt="" style="margin-left: 60px; margin-top: 50px;" width="100%">
                 </div>
                 <div class="col-md-5">
                     <h2>Sữa GROW PLUS chính hãng</h2>
@@ -76,7 +77,7 @@
                         <p><i class="fa-regular fa-hourglass" style="margin-right: 10px;"></i>Hoản Trả Miễn Phí Trong 7 Ngày</p>
                     </div><br>
                     <div class="sectionmini2">
-                        <img src="../img/mienphigiaohang.jpg" alt="" height="95%" style="border-radius: 30px;">
+                        <img src="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/img/mienphigiaohang.jpg" alt="" height="95%" style="border-radius: 30px;">
                     </div>
                 </div>
             </div>
@@ -112,9 +113,9 @@
                     <table>
                         <tr>
                             <th>
-                                <a href="../html/chitietoptimun.html">
+                                <a href="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/chitietoptimun.html">
                                     <div class="noidung">
-                                        <img src="../img/listsua/optimun/3.png" alt="">
+                                        <img src="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/img/listsua/optimun/3.png" alt="">
                                         <div class="noidungtext">
                                             <h4 style="font-size: 20px;margin-top: 20px; margin-left: 0px;color: black;">Optimum Gold Step 2</h4>
                                             <p style="font-weight: bold; font-size: 22px; color: black;">Giá : 330,000 VNĐ</p>
@@ -126,9 +127,9 @@
                         </tr>
                         <tr>
                             <th>
-                                <a href="../html/chitietgrowplus.html">
+                                <a href="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/chitietgrowplus.html">
                                     <div class="noidung">
-                                        <img src="../img/listsua/growplus/3.png" alt="">
+                                        <img src="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/img/listsua/growplus/3.png" alt="">
                                         <div class="noidungtext">
                                             <h4 style="font-size: 20px;margin-top: 20px; margin-left: 0px;color: black;">Optimum Gold Step 2</h4>
                                             <p style="font-weight: bold; font-size: 22px;color: black;">Giá : 330,000 VNĐ</p>
@@ -140,9 +141,9 @@
                         </tr>
                         <tr>
                             <th>
-                                <a href="../html/chitietnan.html">
+                                <a href="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/chitietnan.html">
                                     <div class="noidung">
-                                        <img src="../img/listsua/nan/3.png" alt="">
+                                        <img src="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/img/listsua/nan/3.png" alt="">
                                         <div class="noidungtext">
                                             <h4 style="font-size: 20px;margin-top: 20px; margin-left: 0px;color: black;">Optimum Gold Step 2</h4>
                                             <p style="font-weight: bold; font-size: 22px;color: black;">Giá : 330,000 VNĐ</p>
@@ -154,9 +155,9 @@
                         </tr>
                         <tr>
                             <th>
-                                <a href="../html/chitietsimilac.html">
+                                <a href="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/chitietsimilac.html">
                                     <div class="noidung">
-                                        <img src="../img/listsua/similac/3.png" alt="">
+                                        <img src="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/img/listsua/similac/3.png" alt="">
                                         <div class="noidungtext">
                                             <h4 style="font-size: 20px;margin-top: 20px; margin-left: 0px;color: black;">Optimum Gold Step 2</h4>
                                             <p style="font-weight: bold; font-size: 22px;color: black;">Giá : 330,000 VNĐ</p>
@@ -187,12 +188,12 @@
                 <div class="col-md-4">
                     <div class="con2">
                         <h3 style="margin-right: 100px; margin-left: 90px;">Tải APP Ngay Tại</h3>
-                        <img src="../img/taingay.jpg" alt="" style="margin-top: 10px; border-radius: 25px; margin-left: 60px;">
+                        <img src="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/img/taingay.jpg" alt="" style="margin-top: 10px; border-radius: 25px; margin-left: 60px;">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="con3">
-                        <img src="../img/bando.jpg" alt="" height="100%" class="bando">
+                        <img src="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/img/bando.jpg" alt="" height="100%" class="bando">
                     </div>
                 </div>
             </div>
@@ -241,7 +242,7 @@
                                 <p></p>
                             </div>
                             <div class="col-xs-6">
-                                <button class="btn btn-Sucess btn-group-justified" id="dathang" type="button" style="color:white; background-color: green; width: 100%; height: 50px;"><a href="../html/dathang.html" id="travedathang"></a></button><br>
+                                <button class="btn btn-Sucess btn-group-justified" id="dathang" type="button" style="color:white; background-color: green; width: 100%; height: 50px;"><a href="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/chitietnan.html" id="travedathang"></a></button><br>
                             </div>
                         </form>
                     </div>
