--- a/chitietsimilac.html
+++ b/chitietsimilac.html
@@ -124,7 +124,7 @@
                             <th>
                                 <a href="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/chitietgrowplus.html">
                                     <div class="noidung">
-                                        <img src="../img/listsua/growplus/3.png" alt="">
+                                        <img src="../03-53-Website-gioi-thieu-ban-sua-bot-Vu-Tien-Duc-SV1-Thai-Quang-Bao-SV2-DHKTPM16CTT/img/listsua/growplus/3.png" alt="">
                                         <div class="noidungtext">
                                             <h4 style="font-size: 20px;margin-top: 20px; margin-left: 0px;color: black;">Optimum Gold Step 2</h4>
                                             <p style="font-weight: bold; font-size: 22px;color: black;">Giá : 330,000 VNĐ</p>
